# FJSSP-W

./: .gitignore  README.md  benchmark_load_example.py  example.ipynb  example_visualization.ipynb  filter_benchmarks.ipynb  full_example.ipynb  uncertainty_example.ipynb
AWLS/: .clang-format  .gitignore  18a.txt  1a.txt  AWLS.sln  AWLS.vcxproj  AWLS.vcxproj.filters  CMakeLists.txt  DebugTrace.h  Graph.cpp  Graph.h  Instance.cpp  Instance.h  NeighborhoodMove.h  Operation.h  RandomGenerator.h  Schedule.cpp  Schedule.h  Solver.cpp  Solver.h  TabuList.h  TabuSearch.cpp  TabuSearch.h  main.cpp  run_awls_on_instance.bat  run_smoke.bat  run_smoke_stable.bat
experiments/: README.md  layer1_competition30.csv  layer2_public402.csv  layer3_ablation_representatives.csv
paper/: .gitignore  README.md  fjssp_w_awls_draft_zh.tex  gecco_fjssp_w_awls_draft.tex  references.bib
results/: atpts_reference_comparison_2026-04-23.csv  atpts_reference_scan_2026-04-23.json  atpts_reference_scan_2026-04-23.md  autonomous_iteration_2026-04-29_173643.md  autonomous_iteration_2026-04-29_175128.md  autonomous_iteration_2026-04-29_180530.md  autonomous_iteration_2026-04-29_182033.md  autonomous_iteration_2026-04-29_183817.md  autonomous_iteration_2026-04-30_195631.md  autonomous_iteration_2026-04-30_201628.md  autonomous_iteration_2026-04-30_203232.md  autonomous_iteration_2026-04-30_205609.md  autonomous_iteration_2026-04-30_211648.md  autonomous_iteration_2026-04-30_214120.md  autonomous_iteration_2026-04-30_215916.md  autonomous_iteration_2026-04-30_221546.md  autonomous_iteration_2026-04-30_223010.md  (+186 more)
util/: graph.py  (+8 more)
(+818 files in other folders)
